2012-01-10  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.sql
	  pandoradb.oracle.sql
	  pandoradb.postgreSQL.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql
	  godmode/netflow/nf_edit_form.php
	  operation/netflow/nf_view.php: Changes in output format
	of netflow.

2012-01-10  Vanessa Gil  <vanessa.gil@artica.es>
	* operation/netflow/nf_view.php: Fixed filter
	netflow.

2012-01-10  Vanessa Gil  <vanessa.gil@artica.es>
	* operation/agentes/group_view.php
	  include/functions_group.php: Improve display for 
	group view.

2012-01-10  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/agentes/planned_downtime.php: fixed error in
	planned downtime.

2012-01-10  Junichi Satoh  <junichi@rworks.jp>

	* mobile/operation/agents/view_agents.php: Fixed 'img' paths.

2012-01-10  Junichi Satoh  <junichi@rworks.jp>

	* mobile/index.php: Fixed i18n translation does not work with mobile
	console.

2012-01-09  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/agentes/planned_downtime.php: allow cancelling scheduled
	downtime once it has started.

2012-01-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	* include/functions_api.php: Added new serialized parameter in 
	set_create_network_module function from api. Without it Web console 
	interface module edit view crash.

2012-01-09  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.oracle.sql
	  pandoradb.postgreSQL.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Added migration 
	script for 4.1 version.

2012-01-09  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/netflow/nf_item_list.php
	  godmode/netflow/nf_report_item.php
	  pandoradb.sql: Fixed editing and deleting netflow filters.

2012-01-05  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_graph.php,
	  include/functions_netflow.php,